--- a/Recipe_Sharing_Website/appsettings.json
+++ b/Recipe_Sharing_Website/appsettings.json
@@ -7,3 +7,9 @@
   },
   "AllowedHosts": "*"
 }
+
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipeHubDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+}
