Added Register page and did some bug fixing

--- a/Recipe_Sharing_Website/appsettings.json
+++ b/Recipe_Sharing_Website/appsettings.json
@@ -1,13 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipeHubDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipeHubDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
-
