Added comments for every file

--- a/Recipe_Sharing_Website/appsettings.json
+++ b/Recipe_Sharing_Website/appsettings.json
@@ -1,14 +1,22 @@
+// Root configuration object
 {
+  // Connection string group
   "ConnectionStrings": {
+    // Default SQL Server connection
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipeHubDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
+  // Logging configuration
   "Logging": {
+    // Log level rules
     "LogLevel": {
+      // Application-wide logging level
       "Default": "Information",
+      // Override for ASP.NET Core framework logs
       "Microsoft.AspNetCore": "Warning"
     }
   },
 
+  // Allowed host filter for production hosting
   "AllowedHosts": "*"
 }
